[#12] fix: line-wrap

--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -40,6 +40,7 @@
     line-height: 1.5rem;
     word-wrap: break-word;
     word-break: break-all;
+    white-space: pre-wrap;
 }
 
 .photo_left {
@@ -82,6 +83,7 @@
     max-width: 70%;
     word-wrap: break-word;
     word-break: break-all;
+    white-space: pre-wrap;
 }
 
 .photo_right {
